Prototype of the dragula-based drag-and-drop

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "release": "npm run build && npm publish dist",
     "postrelease": "rm -rf dist",
     "build": "ng-packagr -p package.json && mkdir ./dist/dist && cp -R ./modules/core/styles ./dist/core/styles && cp ./dist/bundles/ngx-chips.umd.js ./dist/dist/ngx-chips.bundle.js",
-    "server": "webpack-dev-server --config webpack.demo.js --inline --colors --progress --port 3010 --content-base demo",
+    "server": "webpack-dev-server --config webpack.demo.js --inline --colors --progress --host 0.0.0.0 --port 3010 --content-base demo",
     "start": "npm run server",
     "test": "karma start karma.conf.js",
-    "codecov": "codecov"
+    "codecov": "codecov",
+    "build-demo": "webpack --config webpack.demo.js"
   },
   "author": {
     "name": "Giancarlo Buomprisco",
@@ -73,6 +74,7 @@
     "zone.js": "0.8.26"
   },
   "dependencies": {
+    "ng2-dragula": "^2.0.4",
     "ng2-material-dropdown": "0.10.1"
   },
   "peerDependencies": {
@@ -107,7 +109,8 @@
       }
     },
     "whitelistedNonPeerDependencies": [
-      "ng2-material-dropdown"
+      "ng2-material-dropdown",
+      "ng2-dragula"
     ]
   }
 }
