Update to Angular 7 (#831)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,6 +47,7 @@
         "useWebpackText": true
     },
     "angularCompilerOptions": {
+        "enableResourceInlining": true,
         "strictMetadataEmit": true
     },
     "files": [
