--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-chips",
-  "version": "1.9.8",
+  "version": "2.0.0-beta.0",
   "description": "Tag Input component for Angular",
   "scripts": {
     "release": "npm run build && npm publish dist",
@@ -18,23 +18,23 @@
   "contributors": [],
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@types/es6-shim": "^0.31.36",
-    "@types/jasmine": "^2.8.7",
-    "@types/node": "^10.0.3",
+    "@angular/animations": "^7.0.0",
+    "@angular/common": "^7.0.0",
+    "@angular/compiler": "^7.0.0",
+    "@angular/compiler-cli": "^7.0.0",
+    "@angular/core": "^7.0.0",
+    "@angular/forms": "^7.0.0",
+    "@angular/http": "^7.0.0",
+    "@angular/platform-browser": "^7.0.0",
+    "@angular/platform-browser-dynamic": "^7.0.0",
+    "@types/es6-shim": "^0.31.37",
+    "@types/jasmine": "^2.8.9",
+    "@types/node": "^10.12.0",
     "angular2-template-loader": "0.6.2",
     "autoprefixer": "^8.4.1",
     "awesome-typescript-loader": "4.0.0",
-    "codecov": "^3.0.1",
-    "core-js": "^2.5.5",
+    "codecov": "^3.1.0",
+    "core-js": "^2.5.7",
     "css-loader": "^0.28.11",
     "es6-promise": "4.2.4",
     "es6-shim": "0.35.3",
@@ -49,22 +49,22 @@
     "karma-jasmine": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "2.0.9",
-    "ng-packagr": "^2.0.0",
-    "node-sass": "^4.9.0",
+    "ng-packagr": "^4.4.0",
+    "node-sass": "^4.9.4",
     "postcss-loader": "^1.2.2",
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "reflect-metadata": "0.1.12",
-    "rxjs": "^6.1.0",
-    "sass-loader": "^7.0.1",
-    "source-map-loader": "^0.2.3",
+    "rxjs": "^6.3.3",
+    "sass-loader": "^7.1.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.21.0",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "1.1.2",
-    "ts-node": "^6.0.2",
-    "tsickle": "^0.27.5",
-    "tslint": "^5.10.0",
-    "typescript": "2.7.2",
+    "ts-node": "^7.0.1",
+    "tsickle": "^0.33.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3",
     "universal-style-loader": "^0.16.3",
     "url-loader": "^0.5.7",
     "webpack": "^3.0.0",
@@ -76,11 +76,11 @@
     "ng2-material-dropdown": "0.10.1"
   },
   "peerDependencies": {
-    "@angular/animations": "^6.0.0",
-    "@angular/common": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "rxjs": "^6.1.0"
+    "@angular/animations": "^7.0.0-rc.1",
+    "@angular/common": "^7.0.0-rc.1",
+    "@angular/core": "^7.0.0-rc.1",
+    "@angular/forms": "^7.0.0-rc.1",
+    "rxjs": "^6.3.3"
   },
   "keywords": [
     "angular tag input",
