* upgraded * used angular-cli for test and demo site * some fixes to support angular8
WIP:
2 test randomly fail
coverage script should be checked/replaced
check warning circular reference

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "release": "npm run build && npm publish dist",
     "postrelease": "rm -rf dist",
-    "build": "ng-packagr -p package.json && mkdir ./dist/dist && cp -R ./modules/core/styles ./dist/core/styles && cp ./dist/bundles/ngx-chips.umd.js ./dist/dist/ngx-chips.bundle.js",
-    "server": "webpack-dev-server --config webpack.demo.js --inline --colors --progress --port 3010 --content-base demo",
+    "build": "ng-packagr -p package.json && mkdirp ./dist/dist && ncp ./modules/core/styles ./dist/core/styles && ncp ./dist/bundles/ngx-chips.umd.js ./dist/dist/ngx-chips.bundle.js",
+    "server": "ng serve --port 3010",
     "start": "npm run server",
-    "test": "karma start karma.conf.js",
+    "test": "ng test",
     "codecov": "codecov"
   },
   "author": {
@@ -18,69 +18,45 @@
   "contributors": [],
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^7.0.0",
-    "@angular/common": "^7.0.0",
-    "@angular/compiler": "^7.0.0",
-    "@angular/compiler-cli": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "@angular/forms": "^7.0.0",
-    "@angular/http": "^7.0.0",
-    "@angular/platform-browser": "^7.0.0",
-    "@angular/platform-browser-dynamic": "^7.0.0",
-    "@types/es6-shim": "^0.31.37",
-    "@types/jasmine": "^2.8.9",
-    "@types/node": "^10.12.0",
-    "angular2-template-loader": "0.6.2",
-    "autoprefixer": "^8.4.1",
-    "awesome-typescript-loader": "4.0.0",
-    "codecov": "^3.1.0",
-    "core-js": "^2.5.7",
-    "css-loader": "^0.28.11",
-    "es6-promise": "4.2.4",
-    "es6-shim": "0.35.3",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.1",
-    "html-loader": "^0.4.4",
-    "istanbul-instrumenter-loader": "2.0.0",
-    "jasmine": "^2.5.3",
-    "karma": "^1.4.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "2.0.9",
-    "ng-packagr": "^4.4.0",
-    "node-sass": "^4.9.4",
-    "postcss-loader": "^1.2.2",
-    "precss": "^1.4.0",
-    "raw-loader": "^0.5.1",
-    "reflect-metadata": "0.1.12",
-    "rxjs": "^6.3.3",
-    "sass-loader": "^7.1.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.21.0",
-    "to-string-loader": "^1.1.5",
-    "ts-helpers": "1.1.2",
-    "ts-node": "^7.0.1",
-    "tsickle": "^0.33.0",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3",
-    "universal-style-loader": "^0.16.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "https://registry.npmjs.org/webpack-dev-server/-/webpack-dev-server-2.11.1.tgz",
-    "webpack-merge": "^4.1.0",
-    "zone.js": "0.8.26"
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "^8.0.0",
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/language-service": "~8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.0",
+    "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
+    "ng-packagr": "^5.2.0",
+    "rxjs": "~6.4.0",
+    "tslint": "^5.17.0",
+    "typescript": "3.4.5",
+    "zone.js": "~0.9.1"
   },
   "dependencies": {
     "ng2-material-dropdown": "0.10.1"
   },
   "peerDependencies": {
-    "@angular/animations": "^7.0.0-rc.1",
-    "@angular/common": "^7.0.0-rc.1",
-    "@angular/core": "^7.0.0-rc.1",
-    "@angular/forms": "^7.0.0-rc.1",
-    "rxjs": "^6.3.3"
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "rxjs": "~6.4.0"
   },
   "keywords": [
     "angular tag input",
