added codecoverage but somehow percentages keeps saying unknown

--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,10 @@
             "karmaConfig": "karma.conf.js",
             "assets": [ ],
             "styles": [],
-            "scripts": []
+            "scripts": [],
+            "codeCoverageExclude": [
+              "!/modules/"
+          ]
           }
         },
         "lint": {
