--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "ng-packagr -p package.json && mkdirp ./dist/dist && ncp ./modules/core/styles ./dist/core/styles && ncp ./dist/bundles/ngx-chips.umd.js ./dist/dist/ngx-chips.bundle.js",
     "server": "ng serve --port 3010",
     "start": "npm run server",
-    "test": "ng test",
-    "codecov": "codecov"
+    "test": "ng test --browsers=ChromeHeadless --watch=false",
+    "codecov": "ng test --code-coverage --browsers=ChromeHeadless --watch=false"
   },
   "author": {
     "name": "Giancarlo Buomprisco",
@@ -19,8 +19,8 @@
   "license": "MIT",
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "^8.0.0",
     "@angular/animations": "^8.0.0",
+    "@angular/cli": "^8.0.0",
     "@angular/common": "^8.0.0",
     "@angular/compiler": "^8.0.0",
     "@angular/compiler-cli": "^8.0.0",
@@ -29,20 +29,20 @@
     "@angular/language-service": "~8.0.0",
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "ng-packagr": "^5.2.0",
+    "protractor": "~5.4.0",
     "rxjs": "~6.4.0",
     "tslint": "^5.17.0",
     "typescript": "3.4.5",
