fixed: Lazy routes discovery is not enabled. in demo app

--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
           "options": {
             "outputPath": "dist",
             "index": "demo/index.html",
-            "main": "demo/app.ts",
+            "main": "demo/main.ts",
             "polyfills": "polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
